--- a/opportunities.html
+++ b/opportunities.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="author" content="Crayon'd">
+  <meta name="Description" content="Crayon'd helps startups and enterprises launch their ideas and dreams into products and grow">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <meta name="theme-color" content="#334ac0">
   <!-- Fav Icon  -->
 	<link rel="shortcut icon" href="images/favicon_crayond.png">
 	<!-- Site Title  -->
@@ -37,7 +42,7 @@
               <div class="row">
                   <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 logo_area">
                       <a href="#" class="logo">
-                          <img src="./images/logo-crayond@2x.jpg" />
+                          <img alt="logo-crayond@2x" src="./images/logo-crayond@2x.jpg" />
                       </a>
                   </div>
                   <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
@@ -95,7 +100,7 @@
           <h5 class="fontGraphikMedium">OUR MISSION</h5>
           <h2 class="fontGraphikSemibold">Make dreams come true</h2>
         </div>
-        <img class="line_path" src="./images/line-3.png" />
+        <img alt="line-3" class="line_path" src="./images/line-3.png" />
         <div class="col-md-12 col-sm-12 col-xs-12">
           <p class="fontLatoRegular mission_discription">We understand that it's an incredibly large mission that our team of young minds is committed to succeed in. Crayon'd has enjoyed helping startup founders to take their dream one step closer by building a winning product in the marketplace.
          
@@ -119,7 +124,7 @@
             <div class="item active">
               <div class="col-md-12 col-md-12 col-xs-12 ">
               <div class="col-md-6 col-sm-6 col-xs-12 slider_img">
-                <img src="./images/01_clarity.png" class="img-responsive" alt="Cinque Terre" width="100%">
+                <img alt="01_clarity" src="./images/01_clarity.png" class="img-responsive" alt="Cinque Terre" width="100%">
               </div>
               <div class="col-md-6 col-sm-6 col-xs-12">
                 <h5 class="fontGraphikMedium">CORE VALUES</h5>
@@ -236,7 +241,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12 epic_title">
           <h5 class="fontGraphikMedium">LIFE @ CRAYON'D</h5>
           <h2 class="fontGraphikSemibold">Second Home. Epic Work. Fun Unlimited. </h2>
-          <img class="line_path" src="./images/line-3.png" />
+          <img alt="line-3" class="line_path" src="./images/line-3.png" />
         <!-- </div> -->
         <!-- <div class="col-md-12 col-sm-12 col-xs-12"> -->
           <p >We truly believe in the words of Henry Ford who famously said, "If everyone is moving forward together, then success takes care of itself". Our goal is to create an environment that encourages young minds to harness their talent to create long lasting success and put a dent.</p>
@@ -244,27 +249,27 @@
         <div class="col-md-12 col-sm-12 col-xs-12 event_section">
           <div class="col-md-offset-1 col-md-9 col-sm-offset-1 col-sm-9 col-xs-12">
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
-              <img src="./images/01_greatculture.png" style="margin-bottom: 20px;">
+              <img alt="01_greatculture" src="./images/01_greatculture.png" style="margin-bottom: 20px;">
               <p style="font-size: 17px;word-break: break-all;" class="fontGraphikRegular">Great Culture</p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
-              <img src="./images/02_exponentiallearning.png" style="margin-bottom: 20px;">
+              <img alt="02_exponentiallearning" src="./images/02_exponentiallearning.png" style="margin-bottom: 20px;">
               <p style="font-size: 17px;" class="fontGraphikRegular">Exponential Learning</p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
-              <img src="./images/03_thoughtleadership.png" style="margin-bottom: 20px;">
+              <img alt="03_thoughtleadership" src="./images/03_thoughtleadership.png" style="margin-bottom: 20px;">
               <p style="font-size: 17px;" class="fontGraphikRegular">Thought Leadership</p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
-              <img src="./images/04_ambience.png" style="margin-bottom: 20px;">
+              <img alt="04_ambience" src="./images/04_ambience.png" style="margin-bottom: 20px;">
               <p style="font-size: 17px;" class="fontGraphikRegular">Ambience<br/>&nbsp;</p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
-              <img src="./images/05_freedom.png" style="margin-bottom: 20px">
+              <img alt="05_freedom" src="./images/05_freedom.png" style="margin-bottom: 20px">
               <p style="font-size: 17px;" class="fontGraphikRegular">Freedom</p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
-              <img src="./images/06_cricket.png" style="margin-bottom: 20px">
+              <img alt="06_cricket" src="./images/06_cricket.png" style="margin-bottom: 20px">
               <p style="font-size: 17px;" class="fontGraphikRegular">Cricket</p>
             </div>  
           </div>
@@ -278,20 +283,20 @@
     <div class="col-md-12 col-xs-12 col-sm-12 ambience_card" style="padding: 56px 0px 96px 0px">
           <div class="col-md-4 imge_width" style="float: right;margin-top: 26px; height: 410px;">
             <h5 style="padding-bottom: 8px;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5>
-            <img class="img-responsive" src="./images/05_ambiencepic.png" style="width: 100%;height: 100%;border-radius: 8px;">
+            <img alt="05_ambiencepic" class="img-responsive" src="./images/05_ambiencepic.png" style="width: 100%;height: 100%;border-radius: 8px;">
           </div>
           <div class="col-md-8 col-sm-12 col-xs-12">
             <div class="col-md-6 col-sm-12 col-xs-12 img_look">
-              <img class="img-responsive" src="./images/01_ambiencepic.png">
+              <img alt="01_ambiencepic" class="img-responsive" src="./images/01_ambiencepic.png">
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 img_look">
-              <img class="img-responsive" src="./images/02_ambiencepic.png" >
+              <img alt="02_ambiencepic" class="img-responsive" src="./images/02_ambiencepic.png" >
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 img_look">
-              <img class="img-responsive" src="./images/03_ambiencepic.png" >
+              <img alt="03_ambiencepic" class="img-responsive" src="./images/03_ambiencepic.png" >
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 img_look">
-              <img class="img-responsive" src="./images/04_ambiencepic.png" >
+              <img alt="04_ambiencepic" class="img-responsive" src="./images/04_ambiencepic.png" >
             </div>
           </div>
         </div>
@@ -459,8 +464,8 @@
 <!-- Start Section -->
 <!-- next_billion -->
 <section class="join_team">
-    <img data-aos="zoom-out-left" data-aos-duration="3000" src="./images/oval.png" class="ovel" />
-    <img data-aos="zoom-out-left" data-aos-duration="5000" src="./images/oval-copy-6.png" class="ovel-6" />
+    <img alt="oval" data-aos="zoom-out-left" data-aos-duration="3000" src="./images/oval.png" class="ovel" />
+    <img alt="oval-copy-6" data-aos="zoom-out-left" data-aos-duration="5000" src="./images/oval-copy-6.png" class="ovel-6" />
     <div class="container billion">
         <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
             <button class="button fontLatoRegular" style="width: 230px;">Join Us &nbsp <span> </span></button>
@@ -477,8 +482,8 @@
                 </span></button>
         </div>
     </div>
-    <img data-aos="zoom-in-up" data-aos-duration="5000" src="./images/path-3-copy.png" class="path-3" />
-    <img data-aos="zoom-out-right" data-aos-duration="3000" src="./images/path-3.png" class="path" />
+    <img alt="path-3-copy" data-aos="zoom-in-up" data-aos-duration="5000" src="./images/path-3-copy.png" class="path-3" />
+    <img alt="path-3" data-aos="zoom-out-right" data-aos-duration="3000" src="./images/path-3.png" class="path" />
 </section>
 <!-- end -->
   <!-- main footer -->
