--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="img_section " style="margin: auto;">
-                            <img alt="Products Customer Love" src="./images/(A)-Products-Customer-Love.webp" />
+                            <img alt="Products Customer Love" src="./images/(A)-Products-Customer-Love.png" />
                         </div>
                     </div>
                 </div>
@@ -231,7 +231,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img alt="Modern-Engineering" src="./images/(B)-Modern-Engineering.webp" />
+                            <img alt="Modern-Engineering" src="./images/(B)-Modern-Engineering.png" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -257,7 +257,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img alt="Modern Engineering" src="./images/(B)-Modern-Engineering.webp" />
+                            <img alt="Modern Engineering" src="./images/(B)-Modern-Engineering.png" />
                         </div>
                     </div>
                 </div>
@@ -291,7 +291,7 @@
                         <!-- <div class="img_section" style="margin: auto;">
                         </div> -->
                         <div class="img_section" style="margin: auto;">
-                                <img alt="Early Launch" src="./images/(C)-Early-Launch.webp" />
+                                <img alt="Early Launch" src="./images/(C)-Early-Launch.png" />
                         </div>
                     </div>
                 </div>
@@ -302,7 +302,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/(D)-Our-Pricing.webp" />
+                            <img src="./images/(D)-Our-Pricing.png" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -328,7 +328,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img alt="Our Pricing" src="./images/(D)-Our-Pricing.webp" />
+                            <img alt="Our Pricing" src="./images/(D)-Our-Pricing.png" />
                         </div>
                     </div>
                 </div>
