--- a/who_we_are.html
+++ b/who_we_are.html
@@ -239,7 +239,7 @@
             </div>
             <div class="card_div">
                 <div class="row">
-                    <img src="./images/Our-Culture-Illustration_new.webp" alt="Our Culture" />
+                    <img src="./images/Our-Culture-Illustration.png" alt="Our Culture" />
                 </div>
             </div>
         </div>
@@ -260,7 +260,7 @@
             </div>
             <div class="gallery_list">
                 <div class="row">
-                    <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                    <!-- <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                         <img class="musics" src="./images/05_ambiencepic.png" alt="our culture" />
                     </div>
                     <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8" style="padding-left: 0;">
@@ -269,6 +269,9 @@
                     </div>
                     <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                         <img class="team3" src="./images/celebration.jpg" alt="our culture" />
+                    </div> -->
+                    <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                        <img class="" src="./images/Our-Team-Collage-Mobile Version.jpg" alt="our culture" style="width: 100%;height: 100%;"/>
                     </div>
                 </div>
             </div>
