--- a/GDPR.html
+++ b/GDPR.html
@@ -718,12 +718,12 @@ Crayon'd will also retain Service Data for internal analysis purposes. Service D
             <div class="container " >
                 <div class="row response-xs" style="display: none;">
                 <div class="privacy col-sm-6 col-xs-6">
-                    <a href="./privacy.html" style="color: #43434b;" class="pri" >
+                    <a href="./privacy" style="color: #43434b;" class="pri" >
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">Privacy</p>
                     </a>
                 </div>
                 <div class="gdpr col-sm-6 col-xs-6">
-                    <a href="./gdpr.html" style="color: #43434b;" class="pri1" >
+                    <a href="./gdpr" style="color: #43434b;" class="pri1" >
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR</p>
                     </a>
                 </div>
