--- a/chennai-super-kings.html
+++ b/chennai-super-kings.html
@@ -107,7 +107,7 @@
                         <span ><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
                         <span ><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/opportunities">opportunities</a><tag>We're Hiring</tag></span>
-                        <span class="span-position"><a class="fontLatoRegular resources" href="/" target="_blank">Resources</a>
+                        <span class="span-position"><a class="fontLatoRegular resources" href="/" target="_blank"  rel="noreferrer">Resources</a>
                             <div class="dropdown">
                                 
                                 <a id="blogs" href="https://www.crayond.com/blog"> Blog</a>
@@ -146,7 +146,7 @@
             </li>
             <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
             </li>
-            <li class="menu-item" id="nav-toggle"><a target="_blank" href="/">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
+            <li class="menu-item" id="nav-toggle"><a target="_blank"  rel="noreferrer" href="/">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
             </li>
             <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
             <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
@@ -1048,22 +1048,22 @@
                 </div>
                 <div class ="row footer_social_media1">
                     <div class = "col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link" style="display: flex;justify-content: flex-start;margin-left: 14px;">
-                        <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;">
+                        <a href="https://www.linkedin.com/company/crayond/" target="_blank"  rel="noreferrer" alt="crayond_linkedin" style="text-decoration: none;">
                             <samp class="social_icon">
                              <i class="fa fa-linkedin " aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
+                        <a href="https://www.facebook.com/CrayonDigital/" target="_blank"  rel="noreferrer" alt="crayond_facebook" style="text-decoration: none;">
                             <samp class="social_icon">
                              <i class="fa fa-facebook " aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;">
+                        <a href="https://www.instagram.com/crayondofficial/" target="_blank"  rel="noreferrer" alt="crayond_instagram" style="text-decoration: none;">
                             <samp class="social_icon">
                              <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
+                        <a href="https://twitter.com/crayondofficial" target="_blank"  rel="noreferrer" alt="crayond_twitter" style="text-decoration: none;">
                             <samp class="social_icon">
                              <i class="fa fa-twitter " aria-hidden="true"></i>
                             </samp>
@@ -1113,22 +1113,22 @@
                         </div>
                         <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
                             style="display: flex;justify-content: flex-start; display: none;">
-                            <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;margin-left: 10px">
+                            <a href="https://www.linkedin.com/company/crayond/" target="_blank"  rel="noreferrer" alt="crayond_linkedin" style="text-decoration: none;margin-left: 10px">
                                 <samp class="social_icon">
                                 <i class="fa fa-linkedin " aria-hidden="true"></i>
                                 </samp>
                             </a>
-                            <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
+                            <a href="https://www.facebook.com/CrayonDigital/" target="_blank"  rel="noreferrer" alt="crayond_facebook" style="text-decoration: none;">
                             <samp class="social_icon">
                                 <i class="fa fa-facebook " aria-hidden="true"></i>
                             </samp>
                            </a>
-                           <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;" >
+                           <a href="https://www.instagram.com/crayondofficial/" target="_blank"  rel="noreferrer" alt="crayond_instagram" style="text-decoration: none;" >
                                 <samp class="social_icon">
                                     <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
                                 </samp>
                             </a>
-                            <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
+                            <a href="https://twitter.com/crayondofficial" target="_blank"  rel="noreferrer" alt="crayond_twitter" style="text-decoration: none;">
                                 <samp class="social_icon">
                                 <i class="fa fa-twitter " aria-hidden="true"></i>
                             </samp>
